added loading image and exception logic

--- a/nested-labvm/atd-docker/uilanding/src/html/index.html
+++ b/nested-labvm/atd-docker/uilanding/src/html/index.html
@@ -182,6 +182,10 @@
                 document.getElementById('loader').style.display = 'none'
 
             }
+        }).fail((err)=>{
+            console.log(err)
+            document.getElementById('apiResponse').textContent = "Some thing went wrong"
+                document.getElementById('loader').style.display = 'none'
         })
 
 
