lab_menu submit button change with CVP status

--- a/nested-labvm/atd-docker/uilanding/src/html/index.html
+++ b/nested-labvm/atd-docker/uilanding/src/html/index.html
@@ -144,7 +144,8 @@
                 {% end %}
               </div>
               <button id="labBtn">Start Lab</button>
-              <p id="apiResponse"></p>
+              <p id="cvpStatus"></p>
+              <p id="apiResponse"></p>              
             </div>
         </div>
             </div>
