--- a/nested-labvm/atd-docker/uilanding/src/html/index.html
+++ b/nested-labvm/atd-docker/uilanding/src/html/index.html
@@ -385,6 +385,7 @@ table {
                 values = item.split(',')
                 column1.innerHTML =values[0];
                 let column2 = document.createElement("td");
+                column2.innerHTML =values[1];
                 
                
                 if(values[1].indexOf("Ok") >=0){
