removed lab grading from UI

--- a/nested-labvm/atd-docker/uilanding/src/html/index.html
+++ b/nested-labvm/atd-docker/uilanding/src/html/index.html
@@ -79,14 +79,11 @@
                 <li>
                     <a style="color: white;cursor: pointer;" id="myBtn"  target="_blank">Passwords</a>
                 </li>
-                {% if "lab_grading" not in disable_links %}
-                <li>
-                  <a style="color: white;cursor: pointer;" id="labGrading"  target="_blank">Lab Grading</a>
-              </li>
-              {% end %}
+              {% if "lab_status" not in disable_links %}
                 <li>
                     <a style="color: white;cursor: pointer;" id="labStaus"  target="_blank">Lab Status</a>
                 </li>
+                {% end %}
             </ul>
         </div>
         <!-- /#sidebar-wrapper -->
