js script changes

--- a/nested-labvm/atd-docker/uilanding/src/html/index.html
+++ b/nested-labvm/atd-docker/uilanding/src/html/index.html
@@ -145,8 +145,11 @@
 
                   </div>
             </div>
-
-            <div id="labGradingData" style="display: none;">
+            <div id="labGradingData" style="display: none">
+                <div id="grades"></div>
+                <button id="grade-button" name="grade-button" style="display:none" disabled>GRADE</button>
+            </div>
+            <!-- <div id="labGradingData" style="display: none;">
               <table style="width: 600px;">
                 <thead>
                   <th>
