timestamp for grading

--- a/nested-labvm/atd-docker/uilanding/src/html/index.html
+++ b/nested-labvm/atd-docker/uilanding/src/html/index.html
@@ -151,6 +151,7 @@
                   </div>
             </div>
             <div id="labGradingData" style="display: none">
+                <div id="grading-timestamp"></div>
                 <div id="grades"></div>
                 <button id="grade-button" name="grade-button" style="display:none" disabled>GRADE</button>
             </div>
