fixed spelling mistake

--- a/nested-labvm/atd-docker/uilanding/src/html/index.html
+++ b/nested-labvm/atd-docker/uilanding/src/html/index.html
@@ -79,9 +79,14 @@
                 <li>
                     <a style="color: white;cursor: pointer;" id="myBtn"  target="_blank">Passwords</a>
                 </li>
-              {% if "lab_status" not in disable_links %}
+                {% if "lab_status" not in disable_links %}
                 <li>
                     <a style="color: white;cursor: pointer;" id="labStaus"  target="_blank">Lab Status</a>
+                </li>
+                {% end %}
+                {% if "lab_grading" not in disable_links %}
+                <li>
+                    <a style="color: white;cursor: pointer;" id="labGrading"  target="_blank">Lab Grading</a>
                 </li>
                 {% end %}
             </ul>
@@ -199,7 +204,7 @@
           </div>
             </div>
             </div>
-        </div>
+        </div> -->
         <!-- /#page-content-wrapper -->
         <div id="myModal" class="modal">
             <!-- Modal content -->
