update live chat

--- a/nested-labvm/atd-docker/uilanding/src/html/index.html
+++ b/nested-labvm/atd-docker/uilanding/src/html/index.html
@@ -16,9 +16,6 @@
     <!-- Custom styles for this template -->
     <link href="css/simple-sidebar.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <!-- Start of HubSpot Embed Code -->
-    <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/22485902.js"></script>
-    <!-- End of HubSpot Embed Code -->
 </head>
 
 <body>
@@ -88,6 +85,11 @@
                 </li>
                 {% end %}
             </ul>
+        <div>
+              <!-- Start of HubSpot Embed Code -->
+              <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/22485902.js"></script>
+              <!-- End of HubSpot Embed Code -->
+        </div>
         </div>
         <!-- /#sidebar-wrapper -->
 
