grade button pointer cursor and disabled when clicked

--- a/nested-labvm/atd-docker/uilanding/src/html/index.html
+++ b/nested-labvm/atd-docker/uilanding/src/html/index.html
@@ -153,7 +153,7 @@
             <div id="labGradingData" style="display: none">
                 <div id="grading-timestamp"></div>
                 <div id="grades"></div>
-                <button id="grade-button" name="grade-button" style="display:none" disabled>GRADE</button>
+                <button id="grade-button" name="grade-button" style="display:none; cursor: pointer;" disabled>GRADE</button>
             </div>
             <!-- <div id="labGradingData" style="display: none;">
               <table style="width: 600px;">
