bug fixed from feb release

--- a/nested-labvm/atd-docker/uilanding/src/html/index.html
+++ b/nested-labvm/atd-docker/uilanding/src/html/index.html
@@ -134,7 +134,7 @@
               </div>
               <button id="labBtn">Start Lab</button>
               <p id="cvpStatus"></p>
-              <p id="apiResponse"></p>              
+              <div id="apiResponse"></div>              
             </div>
             
             <div id="labStatusContent" style="display: none;">
