--- a/nested-labvm/atd-docker/uilanding/src/html/index.html
+++ b/nested-labvm/atd-docker/uilanding/src/html/index.html
@@ -12,7 +12,7 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <script src="js/atd-ws.js"></script>
-
+    <script> var currentHostname = window.location.hostname; </script>
     <!-- Custom styles for this template -->
     <link href="css/simple-sidebar.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -108,6 +108,9 @@
                     {% else %}
                         <area alt="{{ escape(node) }}" title="{{ escape(node) }}" href="/ssh/host/{{ escape(NODES[node]['ip']) }}" target="_blank" coords="{{ escape(NODES[node]['coords']) }}" shape="rect">
                     {% end %}
+                    {% end %}
+                    {% for gui_url in zip(GUI_URLS,SERVERS) %}
+                        <area alt="{{ escape(node) }}" title="{{ escape(node) }}" href="{{gui_url[0]}}" target="_blank" coords="{{ escape(SERVERS[gui_url[1]]['coords']) }}" shape="rect">
                     {% end %}
                 </map>
                 <br /><br />
