updated uilanding and docker compose to remove PDF from labguides menu
updated uilanding and docker compose to remove PDF from labguides menu

--- a/nested-labvm/atd-docker/uilanding/src/html/index.html
+++ b/nested-labvm/atd-docker/uilanding/src/html/index.html
@@ -37,7 +37,7 @@
                 </li>
                 {% if "labguides" not in disable_links %}
                 <li>
-                    <a href="{{ labguides }}" target="_blank">Lab Guides</a> <a href="/labguides/ATD.pdf" target="_blank">(PDF)</a>
+                    <a href="{{ labguides }}" target="_blank">Lab Guides</a> <!-- <a href="/labguides/ATD.pdf" target="_blank">(PDF)</a>-->
                 </li>
                 {% end %}
                 {% if "console" not in disable_links %}
