--- a/nested-labvm/atd-docker/uilanding/src/html/index.html
+++ b/nested-labvm/atd-docker/uilanding/src/html/index.html
@@ -135,6 +135,10 @@
                             <area alt="{{ escape(gui_url[1]) }}" title="{{ escape(gui_url[1]) }}" href="{{gui_url[0]}}" target="_blank" coords="{{ escape(SERVERS[gui_url[1]]['coords']) }}" shape="rect">
                         {% end %}
                     </map>
+                    {% if topo_cvp %}
+                    <span id="cvp_info"></span>
+                    <br /><br />
+                {% end %}
                   </div>
                 </div>
               </section>
@@ -222,7 +226,7 @@
 
     <script src="js/foundation.min.js"></script>
 
-    <script src="js/script.js"></script>
+    <!-- <script src="js/script.js"></script> -->
     <!-- Bootstrap core JavaScript -->
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
