--- a/nested-labvm/atd-docker/uilanding/src/html/index.html
+++ b/nested-labvm/atd-docker/uilanding/src/html/index.html
@@ -226,7 +226,7 @@
 
     <script src="js/foundation.min.js"></script>
 
-    <!-- <script src="js/script.js"></script> -->
+    <script src="js/script.js"></script>
     <!-- Bootstrap core JavaScript -->
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
