--- a/nested-labvm/atd-docker/uilanding/src/html/index.html
+++ b/nested-labvm/atd-docker/uilanding/src/html/index.html
@@ -114,7 +114,7 @@
                 <div class="icon"><i class="fa-regular fa-clock"></i></div>
                 <div class="icon-detail">
                   <h2>Time Remaining</h2>
-                  <time>11:49:17</time>
+                  <time><span id="countdown_timer">00:00:00</span></time>
                 </div>
               </div>
               <!---==============-->
