--- a/nested-labvm/atd-docker/uilanding/src/html/index.html
+++ b/nested-labvm/atd-docker/uilanding/src/html/index.html
@@ -168,12 +168,15 @@
                 <table id="labStatusByApi" class="responsive-card-table unstriped">
                   </tbody>
                 </table>
+                <div class="lab-note" id = "resetLabs">
+                    <p id="lastUpdated" ></p>
+                    <div id="resetOkMSG"></div>
               </div>
-              <div class="lab-note">
+              <!-- <div class="lab-note">
                 <b>Last updated: </b>3/27/2024 10:05:40 AM
-              </div>
-              <div class="lab-note">
-                Please <a>Click Here</a> to reset failed switches
+              </div> -->
+
+                <!--Please <a>Click Here</a> to reset failed switches-->
               </div>
             </div>
           </main>
