--- a/nested-labvm/atd-docker/uilanding/src/html/index.html
+++ b/nested-labvm/atd-docker/uilanding/src/html/index.html
@@ -46,7 +46,7 @@
                     >
                   </li>
                   {% if "labguides" not in disable_links %}
-                  
+
                   <li>
                     <a
                       data-id="lab-guides"
@@ -170,10 +170,10 @@
                   </tbody>
                 </table>
             </div>
-                <div class="lab-note" id = "resetLabs">
+                <div class="lab-note" id = "resetLabs"> </div>
                     <p id="lastUpdated" ></p>
                     <div id="resetOkMSG"></div>
-              </div>
+             
               <!-- <div class="lab-note">
                 <b>Last updated: </b>3/27/2024 10:05:40 AM
               </div> -->
