--- a/nested-labvm/atd-docker/uilanding/src/html/index.html
+++ b/nested-labvm/atd-docker/uilanding/src/html/index.html
@@ -170,9 +170,9 @@
                   </tbody>
                 </table>
             </div>
-                <div class="lab-note" id = "resetLabs"> </div>
-                    <p id="lastUpdated" ></p>
-                    <div id="resetOkMSG"></div>
+                <div class="lab-note" id = "resetLabs" style="color: white;"> </div>
+                    <p id="lastUpdated" style="color: white;" ></p>
+                    <div id="resetOkMSG" style="color: white;"></div>
              
               <!-- <div class="lab-note">
                 <b>Last updated: </b>3/27/2024 10:05:40 AM
