--- a/nested-labvm/atd-docker/uilanding/src/html/index.html
+++ b/nested-labvm/atd-docker/uilanding/src/html/index.html
@@ -155,7 +155,7 @@
                   </a>
                 {% end %}
               </div>
-              <a class="button" id="labBtn">Start Lab</a>
+              <button class="button" id="labBtn">Start Lab</button>
               <div class="lab-note" id="cvpStatus">
               </div>
               <div class="lab-note" id="apiResponse">
