added tools for pathfinder
added tools for pathfinder

--- a/nested-labvm/atd-docker/uilanding/src/html/index.html
+++ b/nested-labvm/atd-docker/uilanding/src/html/index.html
@@ -213,7 +213,7 @@
                       </div>
                     </div>
                     <div id="sliderContainer" class="mb-3">
-                      <label for="rangeSlider" class="form-label">Slider</label>
+                      <label for="rangeSlider" class="form-label">Select delay in milli seconds (ms)</label>
                       <input
                         type="range"
                         id="rangeSlider"
